# centralized-pisonet-app

./: package.json
src/: App.tsx  Router.tsx  SettingStore.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/http-server/: Cargo.toml
src-tauri/http-server/src/: lib.rs
src-tauri/src/: constants.rs  lib.rs  main.rs
src-tauri/src/http_server/: handler.rs  models.rs
src-tauri/src/licensing/: cloud_service.rs  mod.rs
src-tauri/src/settings/: appconfig.rs  appconfigmodels.rs  mod.rs  models.rs  uuidmodel.rs
src-tauri/src/window_manager/: utility.rs
src/hooks/: useEventListeners.tsx
src/store/: Settings.tsx
src/window/: index.ts  main-window.tsx  settings-window.tsx  settings.tsx  small-window.tsx
