[package]
name = "centralized-pisonet-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Earl John Abaquita"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "centralized_pisonet_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
machineid-rs = "1.2.4"
anyhow = { version = "1.0.97", default-features = false }
supabase_rs = "0.4.2"
dotenv = "0.15.0"
supabase-auth = "0.10.12"
reqwest = "0.12.15"
